spacing fixes

--- a/src/app/footer/footer.component.sass
+++ b/src/app/footer/footer.component.sass
@@ -16,7 +16,13 @@
 
 span
     color: $color-textondark
-    padding: 0 20px 0 0
+    padding: 0 10px
     font-size: 15px
     display: inline-flex
     align-items: center
+
+    &:first-child
+        padding: 0 10px 0 20px
+        
+    &:last-child
+        padding: 0 20px 0 10px        
