--- a/src/styles.sass
+++ b/src/styles.sass
@@ -87,9 +87,9 @@ body, html
     margin: 20px 20px
     padding: 10px
     max-width: 150px
-    width: calc(50vw - 60px)
+    width: calc(50vw - 70px)
     max-height: 150px
-    height: calc(50vw - 60px)
+    height: calc(50vw - 70px)
     border-radius: 2px
     display: flex
     justify-content: center
